k3s/trino-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trino-ingress
  namespace: dtd-datavisualization
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "default-redirect-https@kubernetescrd"
spec:
  tls:
  - hosts:
    - trino-dev.isacitra.com
    secretName: trino-dev-tls
  rules:
  - host: trino-dev.isacitra.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: trino-cluster-trino
            port:
              number: 8080
